@@ -5,3 +5,6 @@ version 0.0.1 06-27-16
  - events being sent after successful software upgrade package download and then after restart
  - software upgrade package download and upgrade procedure call executed in separate thread
  - ignoring ssl handshake errors (not checking if certificate is signed, not checking certificate host name) when downloading upgrade package
+ - software upgrade feature added
+ - temperature sensor data harvesting from gateway wired connection for TS7970 added
+ - ac current sensor data harvesting from gateway wired connection for TS7970 added
